# lacelang-python-validator

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  bump-version.sh  lace-executor.toml  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
src/lacelang_validator/: __init__.py  __main__.py  ast_fmt.py  cli.py  errors.py  lexer.py  parser.py  validator.py
tests/: conftest.py  test_lexer.py  test_parser.py  test_smoke.py  test_validator.py
